# MDParse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: main.cpp
